--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,40 @@
 .counter-button:hover {
     background-color: rgb(84, 84, 148);
 }
+
+.color-picker-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    margin: 50px;
+    font-size: 3rem;
+}
+
+.color-display {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid rgb(105, 72, 136);
+    border-radius: 25px;
+    margin-bottom: 25px;
+    transition: 0.25 ease;
+}
+
+.color-display p {
+    color: hsl(0, 31%, 75%);
+    font-size: 2rem;
+    text-align: center;
+}
+
+input[type="color"] {
+    width: 75px;
+    height: 50px;
+    padding: 5px;
+    border-radius: 9px;
+    border: 3px solid wheat;
+}
